V050126 Update Discuss This now with persistent knowledge, support for multiple files (in directory) and Send to Word; Freestyle can now also load entire directories ({dir}) and supports fixed directory paths (Word, Excel); improved local lib generator for exctractor, renamer

--- a/Documentation and more/redink.ini
+++ b/Documentation and more/redink.ini
@@ -3,7 +3,7 @@
 ; For more model configurations see allmodels.ini and the other sample file
 ; For a full overview of the parameters and information on how to implement centralized configurations in networks, see the documentation available at https://redink.ai
 ;
-; December 30, 2025
+; 4 January, 2026
 
 ; ------------------------------------------------------------------
 ; Model Config (primary model, secondary model using *_2 suffix))
@@ -183,7 +183,7 @@ UpdateIniSilentMode = 0
 UpdateIniSilentLog = True
 
 ; If you set any client names, only they will be able to run updates (comma-separated, case-insensitive); leave empty to allow all clients; use "clientname" in Freestyle to get the actual client name
-UpdateClients =
+UpdateIniClients =
 
 ; ------------------------------------------------------------------
 ; Markup and Formatting Options
