--- a/Red Ink for Word/My Project/Settings.settings
+++ b/Red Ink for Word/My Project/Settings.settings
@@ -215,5 +215,8 @@
     <Setting Name="ChatEnableTooling" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="DiscussPersistKnowledge" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
