--- a/Red Ink for Word/app.config
+++ b/Red Ink for Word/app.config
@@ -326,6 +326,9 @@
       <setting name="ChatEnableTooling" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="DiscussPersistKnowledge" serializeAs="String">
+        <value>False</value>
+      </setting>
     </Red_Ink_for_Word.MySettings>
     <RedDragon_for_Word.MySettings>
       <setting name="LastChatHistory" serializeAs="String">
