--- a/Red Ink for Word/app.config
+++ b/Red Ink for Word/app.config
@@ -329,6 +329,9 @@
       <setting name="DiscussPersistKnowledge" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="DiscussSelectedMission" serializeAs="String">
+        <value />
+      </setting>
     </Red_Ink_for_Word.MySettings>
     <RedDragon_for_Word.MySettings>
       <setting name="LastChatHistory" serializeAs="String">
