V070126 Update Amended "Discuss This" to include a "Sort out" option for auto-discussions; smaller improvements

--- a/Red Ink for Word/My Project/Settings.settings
+++ b/Red Ink for Word/My Project/Settings.settings
@@ -233,5 +233,20 @@
     <Setting Name="AutoRespondPersona" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="SortOutMainMission" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="SortOutResponderMission" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="SortOutMaxRounds" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="SortOutMainMissionManual" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="SortOutResponderMissionManual" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
