--- a/Red Ink for Word/app.config
+++ b/Red Ink for Word/app.config
@@ -344,6 +344,21 @@
       <setting name="AutoRespondPersona" serializeAs="String">
         <value />
       </setting>
+      <setting name="SortOutMainMission" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="SortOutResponderMission" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="SortOutMaxRounds" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="SortOutMainMissionManual" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="SortOutResponderMissionManual" serializeAs="String">
+        <value />
+      </setting>
     </Red_Ink_for_Word.MySettings>
     <RedDragon_for_Word.MySettings>
       <setting name="LastChatHistory" serializeAs="String">
