V080126 Update Improved "Discuss this" with summary and more; added Word helper for flattening PDFs

--- a/Red Ink for Word/app.config
+++ b/Red Ink for Word/app.config
@@ -359,6 +359,9 @@
       <setting name="SortOutResponderMissionManual" serializeAs="String">
         <value />
       </setting>
+      <setting name="DiscussEnableTooling" serializeAs="String">
+        <value>False</value>
+      </setting>
     </Red_Ink_for_Word.MySettings>
     <RedDragon_for_Word.MySettings>
       <setting name="LastChatHistory" serializeAs="String">
