--- a/Red Ink for Word/My Project/Settings.settings
+++ b/Red Ink for Word/My Project/Settings.settings
@@ -248,5 +248,8 @@
     <Setting Name="SortOutResponderMissionManual" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="DiscussEnableTooling" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
