--- a/Red Ink for Word/packages.config
+++ b/Red Ink for Word/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="DiffPlex" version="1.9.0" targetFramework="net48" />
-  <package id="DocumentFormat.OpenXml" version="3.3.0" targetFramework="net48" />
-  <package id="DocumentFormat.OpenXml.Framework" version="3.3.0" targetFramework="net48" />
+  <package id="DocumentFormat.OpenXml" version="3.4.1" targetFramework="net48" />
+  <package id="DocumentFormat.OpenXml.Framework" version="3.4.1" targetFramework="net48" />
   <package id="Google.Api.CommonProtos" version="2.17.0" targetFramework="net48" />
   <package id="Google.Api.Gax" version="4.13.0" targetFramework="net48" />
   <package id="Google.Api.Gax.Grpc" version="4.13.0" targetFramework="net48" />
@@ -12,11 +12,11 @@
   <package id="Google.Cloud.Speech.V1" version="3.9.0" targetFramework="net48" />
   <package id="Google.LongRunning" version="3.5.0" targetFramework="net48" />
   <package id="Google.Protobuf" version="3.33.2" targetFramework="net48" />
-  <package id="Grpc.Auth" version="2.71.0" targetFramework="net472" />
+  <package id="Grpc.Auth" version="2.76.0" targetFramework="net48" />
   <package id="Grpc.Core" version="2.46.6" targetFramework="net472" />
-  <package id="Grpc.Core.Api" version="2.71.0" targetFramework="net472" />
-  <package id="Grpc.Net.Client" version="2.71.0" targetFramework="net472" />
-  <package id="Grpc.Net.Common" version="2.71.0" targetFramework="net472" />
+  <package id="Grpc.Core.Api" version="2.76.0" targetFramework="net48" />
+  <package id="Grpc.Net.Client" version="2.76.0" targetFramework="net48" />
+  <package id="Grpc.Net.Common" version="2.76.0" targetFramework="net48" />
   <package id="HtmlAgilityPack" version="1.12.4" targetFramework="net48" />
   <package id="Markdig" version="0.44.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="10.0.1" targetFramework="net48" />
@@ -33,6 +33,7 @@
   <package id="Microsoft.ML.Tokenizers" version="2.0.0" targetFramework="net48" />
   <package id="Microsoft.ML.Tokenizers.Data.Cl100kBase" version="2.0.0" targetFramework="net48" />
   <package id="Microsoft.Office.Interop.PowerPoint" version="15.0.4420.1018" targetFramework="net48" />
+  <package id="Microsoft.Web.WebView2" version="1.0.3650.58" targetFramework="net48" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net472" />
   <package id="NAudio" version="2.2.1" targetFramework="net472" />
   <package id="NAudio.Asio" version="2.2.1" targetFramework="net472" />
@@ -48,10 +49,11 @@
   <package id="PdfiumViewer" version="2.13.0.0" targetFramework="net48" />
   <package id="PdfiumViewer.Native.x86.v8-xfa" version="2018.4.8.256" targetFramework="net48" />
   <package id="PdfiumViewer.Native.x86_64.v8-xfa" version="2018.4.8.256" targetFramework="net48" />
-  <package id="PdfPig" version="0.1.12" targetFramework="net48" />
-  <package id="PDFsharp" version="6.2.3" targetFramework="net48" />
+  <package id="PdfPig" version="0.1.13" targetFramework="net48" />
+  <package id="PDFsharp" version="6.2.4" targetFramework="net48" />
   <package id="System.Buffers" version="4.6.1" targetFramework="net472" />
   <package id="System.CodeDom" version="10.0.1" targetFramework="net48" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net48" />
   <package id="System.Diagnostics.DiagnosticSource" version="10.0.1" targetFramework="net48" />
   <package id="System.Formats.Asn1" version="10.0.1" targetFramework="net48" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
