V120126 Update Added "Translate on-the-fly" (Outlook); added "Chart:" with Draw.io integration in Word; added more text compare helper functionality (Word, Outlook)

--- a/SharedLibrary/My Project/Settings.settings
+++ b/SharedLibrary/My Project/Settings.settings
@@ -104,5 +104,20 @@
     <Setting Name="IgnoredUpdates_Custom" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="QuickTranslateLanguage" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="QuickTranslateX" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="QuickTranslateY" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="QuickTranslateWidth" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="QuickTranslateHeight" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
