--- a/Red Ink for Word/Red Ink for Word.vbproj
+++ b/Red Ink for Word/Red Ink for Word.vbproj
@@ -582,6 +582,9 @@
   <ItemGroup>
     <AppDesigner Include="My Project\" />
     <Compile Include="BridgeSubs.vb" />
+    <Compile Include="DrawioEditorForm.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="LogWindow.vb">
       <SubType>Form</SubType>
     </Compile>
