--- a/SharedLibrary/app.config
+++ b/SharedLibrary/app.config
@@ -166,6 +166,21 @@
       <setting name="IgnoredUpdates_Custom" serializeAs="String">
         <value />
       </setting>
+      <setting name="QuickTranslateLanguage" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="QuickTranslateX" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="QuickTranslateY" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="QuickTranslateWidth" serializeAs="String">
+        <value>0</value>
+      </setting>
+      <setting name="QuickTranslateHeight" serializeAs="String">
+        <value>0</value>
+      </setting>
     </SharedLibrary.My.MySettings>
   </userSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" /></startup></configuration>
