--- a/SharedLibrary/packages.config
+++ b/SharedLibrary/packages.config
@@ -18,6 +18,7 @@
   <package id="Microsoft.ML.Tokenizers" version="2.0.0" targetFramework="net48" />
   <package id="Microsoft.ML.Tokenizers.Data.Cl100kBase" version="2.0.0" targetFramework="net48" />
   <package id="Microsoft.Office.Interop.Word" version="15.0.4797.1004" targetFramework="net472" />
+  <package id="Microsoft.Web.WebView2" version="1.0.3650.58" targetFramework="net48" />
   <package id="Microsoft.Win32.Registry" version="5.0.0" targetFramework="net472" />
   <package id="NAudio" version="2.2.1" targetFramework="net472" />
   <package id="NAudio.Asio" version="2.2.1" targetFramework="net472" />
