V140126 Update, Patch Improved draw.io integration and added parameter "ForceDrawioLocal"; "Apply Doc Style" with empty paragraph remover; improved layout of Translate on-the-fly; updated documentation; added prompt for charting timelines to prompt library

--- a/Red Ink for Word/My Project/Settings.settings
+++ b/Red Ink for Word/My Project/Settings.settings
@@ -251,5 +251,8 @@
     <Setting Name="DiscussEnableTooling" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
     </Setting>
+    <Setting Name="DocStyle_RemoveEmptyLines" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
