--- a/Red Ink for Word/app.config
+++ b/Red Ink for Word/app.config
@@ -366,6 +366,9 @@
       <setting name="DiscussEnableTooling" serializeAs="String">
         <value>False</value>
       </setting>
+      <setting name="DocStyle_RemoveEmptyLines" serializeAs="String">
+        <value>False</value>
+      </setting>
     </Red_Ink_for_Word.MySettings>
     <RedDragon_for_Word.MySettings>
       <setting name="LastChatHistory" serializeAs="String">
